@@ -15,7 +15,10 @@
         ]},
    {registered,[
         % default scope (as defined with DEFAULT_SCOPE in cpg_constants.hrl)
-        cpg_default_scope
+        cpg_default_scope,
+        % env scope list defines locally registered pids
+        groups_scope1,
+        groups_scope2
         ]},
    {applications, [
         quickrand,
@@ -24,9 +27,13 @@
         kernel
         ]},
    {mod, {cpg_app, []}},
-   {start_phases, []},
    {env, [
+        {node_type, visible}, % visible | all
         {scope, [
+            % automatically created scopes to keep process groups separate
+            % (each becomes a locally registered name)
+            groups_scope1,
+            groups_scope2
             ]}
         ]}]}.
 
